# loggerlib

./: CMakeLists.txt  README.md
.circleci/: config.yml
.github/workflows/: cmake.yml
include/: logger.h
src/: logger.c
test/: main.c
